# NeuralRepo

./: .env.example  .gitignore  Dockerfile  MODULE_6_CODE_CHUNKING.md  MODULE_7_EMBEDDING_PIPELINE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260428_0001_create_projects_table.py  20260428_0002_create_repositories_table.py  20260428_0003_create_repository_files_table.py  20260428_0004_create_repository_ast_tables.py  20260428_0005_create_repository_dependencies_table.py  20260428_0006_create_code_chunks_table.py  20260428_0007_create_embedding_tables.py
app/: main.py
app/api/: root.py  router.py
app/core/: config.py  embedding_init.py  exceptions.py  lifespan.py  logging.py
app/db/: session.py
app/models/: code_chunk.py  embedding.py  project.py  repository.py  repository_dependency.py  repository_file.py  repository_import.py  repository_symbol.py
app/repositories/: code_chunk_repository.py  embedding_repository.py  project_repository.py  repository_dependency_repository.py  repository_file_repository.py  repository_import_repository.py  repository_repository.py  repository_symbol_repository.py
app/schemas/: code_chunk.py  embedding.py  health.py  project.py  repository.py  repository_ast.py  repository_file.py  (+1 more)
tests/: conftest.py  test_chunking_strategy.py  test_embedding.py  test_language_detection.py  test_projects.py  test_python_ast_extractor.py  test_repository_chunking_service.py  test_repository_dependency_graph.py  test_repository_ingestion.py  test_repository_scanner.py  test_root.py
(+25 files in other folders)
