[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-intelligence-assistant"
version = "0.1.0"
description = "Production-grade backend for Codebase Intelligence Assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.16.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.116.0",
  "greenlet>=3.2.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.10.0",
  "python-json-logger>=3.3.0",
  "python-multipart>=0.0.20",
  "qdrant-client>=2.12.0",
  "sentence-transformers>=3.0.0",
  "sqlalchemy>=2.0.40",
  "structlog>=25.4.0",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=3.2.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
